[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "azul-plugin-retrohunt"
description = "Azul plugins for indexing and searching historical samples efficiently."
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["license.md"]
authors = [
  { name="Azul"},
]
requires-python = ">=3.12"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiofiles>=25.1.0",
    "azul-bedrock>=10.0.15",
    "azul-runner>=4.0.0",
    "azul-security>=10.0.11",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "idstools>=0.6.5",
    "jinja2>=3.1.6",
    "pendulum>=3.1.0",
    "progressbar2>=4.5.0",
    "prometheus-client>=0.24.1",
    "pydantic>2",
    "python-multipart>=0.0.22",
    "semantic-version>=2.10.0",
    "starlette-exporter>=0.23.0",
    "uvicorn>=0.40.0",
    "wheel>=0.46.3",
    "yara-python>=4.5.4",
]

[project.scripts]
azul-plugin-retroingestor = "azul_plugin_retrohunt.ingestor:main"
azul-plugin-retroindexer = "azul_plugin_retrohunt.indexer:main"
azul-plugin-retroserver = "azul_plugin_retrohunt.server:main"
azul-plugin-retroworker = "azul_plugin_retrohunt.worker:main"

[project.entry-points."my_plugin_group"]
retrohunt = "azul_plugin_retrohunt.api:router"

[project.urls]
Documentation = "https://australiancybersecuritycentre.github.io/azul/"
Repository = "https://github.com/AustralianCyberSecurityCentre/azul-plugin-retrohunt"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "only-version"

[tool.hatch.version.fallback]
version = "0.0.0"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel.force-include]
"azul_plugin_retrohunt/bigyara/bin/bgindex" = "azul_plugin_retrohunt/bigyara/bin/bgindex"
"azul_plugin_retrohunt/bigyara/bin/bgdump" = "azul_plugin_retrohunt/bigyara/bin/bgdump"
"azul_plugin_retrohunt/bigyara/bin/bgparse" = "azul_plugin_retrohunt/bigyara/bin/bgparse"
"azul_plugin_retrohunt/bigyara/bin/yarac-small" = "azul_plugin_retrohunt/bigyara/bin/yarac-small"
"azul_plugin_retrohunt/bigyara/bin/yarac-large" = "azul_plugin_retrohunt/bigyara/bin/yarac-large"


[dependency-groups]
dev = [
    "azul-runner[test-utils]>=10.0.18",
    "cart>=1.2.3",
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "tox>=4.34.1",
    "urllib3>=2.6.3",
]

[tool.ruff]
# formatter config
line-length = 119
indent-width = 4
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".env",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Flake8 linting equivalent but for ruff
[tool.ruff.lint]
select = [
  # isort
  "I",
  # Code styles
  "E4",
  "E7",
  "E9",
  # pyflakes
  "F",
  # flake8 bug bear
  "B",
  # flake8 doc strings
  "D",
  # bandit
  "S",
]
ignore = ["B008","C901","D104","D107","E203"]
exclude = [
    "tests/*",
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.pydocstyle]
# Use the Google docstring convention
convention = "google"

# Make formatter match black
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
